Add updated_at field to Job
