# postman/schemas/ciservice.openapi.yaml
@@ -151,12 +151,16 @@ components:
         - id
         - name
         - created_at
+        - updated_at
       properties:
         id:
           $ref: '#/components/schemas/JobId'
         name:
           type: string
         created_at:
+          type: string
+          format: date-time
+        updated_at:
           type: string
           format: date-time
     CreateJob:
