# src/models/job.rs
@@ -9,6 +9,7 @@ pub struct Job {
     pub id: i32,
     pub name: String,
     pub created_at: NaiveDateTime,
+    pub updated_at: NaiveDateTime,
 }
 
 #[derive(Insertable)]
